update layout to url instead of baseurl

--- a/mom/index.html
+++ b/mom/index.html
@@ -48,7 +48,7 @@
   <p id="years">1947 - 2018</p>
   <div id="about">
     <div id="main-photo">
-      <img src="{{ site.baseurl }}static/img/mom/mom-bday-2016.jpg" />
+      <img src="{{ site.url }}/static/img/mom/mom-bday-2016.jpg" />
     </div>
     <div id="my-mom">
       <p>
@@ -117,8 +117,8 @@
       </a>
     </div>
     <div>
-      <a href="{{ site.baseurl }}static/img/mom/IMG_6931.JPG" target="_blank">
-        <img class="thumbnail" src="{{ site.baseurl }}static/img/mom/thumbnails/IMG_6931.JPG" />
+      <a href="{{ site.url }}/static/img/mom/IMG_6931.JPG" target="_blank">
+        <img class="thumbnail" src="{{ site.url }}/static/img/mom/thumbnails/IMG_6931.JPG" />
       </a>
     </div>
     <div>
@@ -137,8 +137,8 @@
       </a>
     </div>
     <div>
-      <a href="{{ site.baseurl }}static/img/mom/IMG_0417.jpg" target="_blank">
-        <img class="thumbnail" src="{{ site.baseurl }}static/img/mom/thumbnails/IMG_0417.jpg" />
+      <a href="{{ site.url }}/static/img/mom/IMG_0417.jpg" target="_blank">
+        <img class="thumbnail" src="{{ site.url }}/static/img/mom/thumbnails/IMG_0417.jpg" />
       </a>
     </div>
     <div>
@@ -147,8 +147,8 @@
       </a>
     </div>
     <div>
-      <a href="{{ site.baseurl }}static/img/mom/IMG_0410.jpg" target="_blank">
-        <img class="thumbnail" src="{{ site.baseurl }}static/img/mom/thumbnails/IMG_0410.jpg" />
+      <a href="{{ site.url }}/static/img/mom/IMG_0410.jpg" target="_blank">
+        <img class="thumbnail" src="{{ site.url }}/static/img/mom/thumbnails/IMG_0410.jpg" />
       </a>
     </div>
     <!--<div>
