--- a/mom/index.html
+++ b/mom/index.html
@@ -118,7 +118,7 @@
     </div>
     <div>
       <a href="{{ site.url }}/static/img/mom/IMG_6931.JPG" target="_blank">
-        <img class="thumbnail" src="{{ site.url }}/static/img/mom/thumbnails/IMG_6931.JPG" />
+        <img class="thumbnail" src="{{ site.url }}/static/img/mom/thumbnails/IMG_6931.jpg" />
       </a>
     </div>
     <div>
